--- a/pom.xml
+++ b/pom.xml
@@ -82,13 +82,23 @@
 			<scope>test</scope> </dependency> -->
 	</dependencies>
 
-	<!-- <build>
-		<plugins>
+	<build>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-install-plugin</artifactId>
+		    <version>2.5.2</version>
+		</plugin>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-deploy-plugin</artifactId>
+		    <version>2.8.2</version>
+		</plugin>
+		<!-- <plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
-	</build>-->
+		</plugins> -->
+	</build>
 
 </project>
